--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,6 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-hls:2.18.1'
     implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.18.1'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.18.1'
-
+    //noinspection GradleCompatible
+    // implementation 'com.android.support:appcompat-v7:27.1.0'
 }
