--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RadioKazanSings"
         tools:targetApi="31">
-        <service
-            android:name=".ForegroundService">
-        </service>
+        <activity
+            android:name=".Information"
+            android:exported="false"
+            android:screenOrientation="portrait"/>
+
+        <service android:name=".ForegroundService"></service>
 
         <activity
             android:name=".Contacts"
             android:exported="true"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -36,6 +39,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
