--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:exported="false"
             android:screenOrientation="portrait"/>
 
-        <service android:name=".ForegroundService"></service>
+        <service android:name=".ForegroundService"/>
 
         <activity
             android:name=".Contacts"
@@ -39,6 +39,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name=".DismissReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="dismiss"/>
+                <category android:name="dismiss_category"/>
+            </intent-filter>
+        </receiver>
 
         <meta-data
             android:name="preloaded_fonts"
