--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,9 @@
 
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
-
-  <application
+    <application
     android:name=".KazanRadioApplication"
     android:allowBackup="true"
     android:dataExtractionRules="@xml/data_extraction_rules"
