--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,12 +18,36 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    flavorDimensions += "version"
+    productFlavors {
+        create("dev") {
+            dimension = "version"
+        }
+        create("prod") {
+            dimension = "version"
+            applicationId "com.kazan.radiosings"
+        }
+    }
+
+    /*productFlavors {
+
+        dev {
+            dimension 'test'
+        }
+
+        production {
+            dimension 'prod'
+            applicationId "com.kazan.radiosings"
+        }
+    }*/
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
